Fix portal in dark mode

--- a/assets/stylesheets/koenig.css
+++ b/assets/stylesheets/koenig.css
@@ -1,3 +1,7 @@
+#ghost-portal-root {
+  color-scheme: light;
+}
+
 .md-typeset figure.gh-card-image, .gh-card-image img {
   width: 100%;
 }
